Actions
Bug #4270
closedld(1) argument error reporting is still pretty bad
Start date:
2013-10-24
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
There are still several problems with the error reporting of ld(1).
The two I most recently ran into are:
% ld --somethingbad --library foo --library bar ld: fatal: unrecognized option '--' ld: fatal: use the -z help option for usage information
As you can see, it doesn't tell you which long option is bad.
Further
% ld -lfoo --library ld: fatal: unrecognized option '-l' ld: fatal: use the -z help option for usage information % ld -Lfoo --library ld: fatal: unrecognized option '-L' ld: fatal: use the -z help option for usage information
No, clearly, ld does indeed understand -l and -L, but --library needs an argument.
Updated by Rich Lowe over 8 years ago
- Status changed from New to Resolved
- % Done changed from 0 to 100
- Difficulty changed from Medium to Bite-size
Resolved in c5accfb
Actions